[gd_scene load_steps=7 format=3 uid="uid://chdilcosqxgb8"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_2xxw0"]
[ext_resource type="Texture2D" uid="uid://b4obxbtfm6pu1" path="res://Textures/ship_sidesA.png" id="2_oem2a"]
[ext_resource type="AudioStream" uid="uid://dog3pfvebj1pn" path="res://SFX/explosion.mp3" id="3_b5u7i"]
[ext_resource type="AudioStream" uid="uid://d2v6w0i2sk42b" path="res://SFX/Alert.wav" id="4_i1n2g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pindq"]
radius = 22.0
height = 103.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6us7i"]
radius = 582.001

[node name="Chaser Enemy" type="Area2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_2xxw0")
enemy_type = 1
explosion_dmg = 100
speed = 4

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.952941, 0.368627, 0, 1)
texture = ExtResource("2_oem2a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 4.5)
shape = SubResource("CapsuleShape2D_pindq")

[node name="Detection Radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Radius"]
shape = SubResource("CircleShape2D_6us7i")

[node name="ExplosionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_b5u7i")
volume_db = -5.0
pitch_scale = 1.3

[node name="AlertSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_i1n2g")
volume_db = -8.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Detection Radius" to="." method="_on_detection_radius_body_entered"]
